--- a/css/styles.css
+++ b/css/styles.css
@@ -8,14 +8,27 @@
 body {
   background: var(--primary-white-color);
   color: #2a2a2a;
+
+  font-family: Roboto, sans-serif;
+  letter-spacing: 0.03em;
 }
 
 ul {
   list-style: none;
 }
 
+p {
+  color: var(--title-text-color);
+}
+
+/* logo */
 .logo {
   color: #000000;
+  font-family: Raleway, cursive;
+
+  font-size: 26px;
+  line-height: 1.19;
+  text-decoration: none;
 }
 
 .logo-section {
@@ -26,10 +39,42 @@ ul {
 
 .site-nav .link {
   color: var(--primary-text-color);
+
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  text-decoration: none;
 }
 
 .site-nav .link:hover,
 .site-nav .link:focus {
+  color: var(--accent-color);
+}
+
+.site-nav .link.current {
+  color: var(--accent-color);
+}
+
+.contact.list {
+  font-family: Roboto;
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
+.button.secondary {
+  color: var(--title-text-color);
+
+  font-size: 14px;
+  line-height: 1.71px;
+  text-decoration: none;
+}
+
+.button.secondary:focus,
+.button.secondary:hover {
   color: var(--accent-color);
 }
 
@@ -39,8 +84,16 @@ ul {
 }
 .hero-title {
   color: var(--primary-white-color);
+
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 }
-.button {
+.button.primary {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
   cursor: pointer;
@@ -49,20 +102,68 @@ ul {
 /* features */
 .features .title {
   color: var(--primary-text-color);
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
 }
+
 .features .text {
-  color: var(--title-text-color);
+  font-size: 14px;
+  line-height: 1.71;
 }
 /* about us */
-.about .title {
+.about-us .title {
   color: var(--primary-text-color);
+
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
 }
 
 /* team */
-
 .team .title {
   color: var(--primary-text-color);
+
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
 }
-.team .text {
-  color: var(--title-text-color);
+
+.team .title-list {
+  color: var(--primary-text-color);
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
 }
+.team {
+  background-color: #f5f4fa;
+}
+
+/* footer */
+.footer {
+  background-color: var(--primary-text-color);
+}
+
+.logo.secondary {
+  color: var(--primary-white-color);
+}
+
+.button.address {
+  color: var(--primary-white-color);
+
+  font-size: 14px;
+  line-height: 24px;
+  text-decoration: none;
+}
+
+.button.address:focus,
+.button.address:hover {
+  color: var(--accent-color);
+}
+
+/* портфолио */
