--- a/css/styles.css
+++ b/css/styles.css
@@ -6,11 +6,21 @@
 }
 
 body {
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: 0.03em;
   background: var(--primary-white-color);
   color: #2a2a2a;
+}
 
-  font-family: Roboto, sans-serif;
-  letter-spacing: 0.03em;
+.visually-hidden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
 }
 
 ul {
@@ -23,12 +33,11 @@ p {
 
 /* logo */
 .logo {
-  color: #000000;
-  font-family: Raleway, cursive;
-
+  font-family: 'Raleway', cursive;
   font-size: 26px;
   line-height: 1.19;
   text-decoration: none;
+  color: #000000;
 }
 
 .logo-section {
@@ -38,14 +47,12 @@ p {
 /* site-nav & contact */
 
 .site-nav .link {
-  color: var(--primary-text-color);
-
-  font-family: Roboto;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
+  color: var(--primary-text-color);
 }
 
 .site-nav .link:hover,
@@ -58,19 +65,16 @@ p {
 }
 
 .contact.list {
-  font-family: Roboto;
-
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
 .button.secondary {
-  color: var(--title-text-color);
-
   font-size: 14px;
   line-height: 1.71px;
   text-decoration: none;
+  color: var(--title-text-color);
 }
 
 .button.secondary:focus,
@@ -83,15 +87,13 @@ p {
   background-color: #2f303a;
 }
 .hero-title {
-  color: var(--primary-white-color);
-
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  color: var(--primary-white-color);
 }
 .button.primary {
   color: var(--primary-white-color);
@@ -101,12 +103,11 @@ p {
 
 /* features */
 .features .title {
-  color: var(--primary-text-color);
-
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
+  color: var(--primary-text-color);
 }
 
 .features .text {
@@ -115,30 +116,27 @@ p {
 }
 /* about us */
 .about-us .title {
-  color: var(--primary-text-color);
-
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
+  color: var(--primary-text-color);
 }
 
 /* team */
 .team .title {
-  color: var(--primary-text-color);
-
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
+  color: var(--primary-text-color);
 }
 
 .team .title-list {
-  color: var(--primary-text-color);
-
   font-weight: 500;
   font-size: 16px;
   line-height: 19px;
+  color: var(--primary-text-color);
 }
 .team {
   background-color: #f5f4fa;
@@ -154,11 +152,10 @@ p {
 }
 
 .button.address {
-  color: var(--primary-white-color);
-
   font-size: 14px;
   line-height: 24px;
   text-decoration: none;
+  color: var(--primary-white-color);
 }
 
 .button.address:focus,
@@ -167,3 +164,31 @@ p {
 }
 
 /* портфолио */
+.button-section {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  color: var(--primary-text-color);
+  cursor: pointer;
+}
+
+.button-section:focus,
+.button-section:hover {
+  background-color: var(--accent-color);
+  color: var(--primary-white-color);
+}
+
+.section-title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--primary-text-color);
+}
+
+.section-text {
+  font-size: 16px;
+  line-height: 1.87;
+  color: var(--title-text-color);
+}
