--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,7 @@ p {
 .team .title-list {
   font-weight: 500;
   font-size: 16px;
-  line-height: 19px;
+  line-height: 1.18;
   color: var(--primary-text-color);
 }
 .team {
@@ -153,7 +153,7 @@ p {
 
 .button.address {
   font-size: 14px;
-  line-height: 24px;
+  line-height: 1.71;
   text-decoration: none;
   color: var(--primary-white-color);
 }
